--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
         body { margin: 0; overflow: hidden; background: #87CEEB; font-family: 'Comic Sans MS', cursive; }
-        #ui { position: absolute; top: 10px; left: 10px; pointer-events: none; }
+        #ui { position: absolute; top: 10px; left: 10px; pointer-events: none; z-index: 10; }
         #score { font-size: 30px; color: white; text-shadow: 2px 2px 0 #000; }
-        .instrukti { position: absolute; bottom: 10px; width: 100%; text-align: center; color: white; }
+        .instrukti { position: absolute; bottom: 10px; width: 100%; text-align: center; color: white; z-index: 10; }
+        canvas { display: block; }
     </style>
 </head>
 <body>
@@ -16,7 +17,7 @@
 <div id="ui">
     <div id="score">Pisteet: 0</div>
 </div>
-<div class="instrukti">Klikkaa palloja ennen kuin ne valtaavat maailman!</div>
+<div class="instrukti">Klikkaa naamoja! (Jos kuvat ei lataa, näet väripalloja)</div>
 
 <script>
     const { Engine, Render, Runner, Bodies, Composite, Mouse, MouseConstraint, Events } = Matter;
@@ -28,12 +29,12 @@
         options: {
             width: window.innerWidth,
             height: window.innerHeight,
-            wireframes: false, // Jotta kuvat näkyvät
-            background: 'transparent'
+            wireframes: false, // TÄRKEÄ: Pitää olla false
+            background: '#87CEEB'
         }
     });
 
-    // Luodaan seinät, jotta pallot pysyvät ruudulla
+    // Seinät
     const ground = Bodies.rectangle(window.innerWidth/2, window.innerHeight + 30, window.innerWidth, 60, { isStatic: true });
     const leftWall = Bodies.rectangle(-30, window.innerHeight/2, 60, window.innerHeight, { isStatic: true });
     const rightWall = Bodies.rectangle(window.innerWidth + 30, window.innerHeight/2, 60, window.innerHeight, { isStatic: true });
@@ -41,19 +42,21 @@
 
     let score = 0;
 
-    // Funktio, joka luo putoavan naaman
     function spawnFace() {
         const x = Math.random() * window.innerWidth;
         const isJassu = Math.random() > 0.5;
-        const texture = isJassu ? 'jassu.png' : 'jepu.png'; // Lisää nämä kuvat repoosi!
+        const imgPath = isJassu ? 'jassu.png' : 'jepu.png';
 
-        const face = Bodies.circle(x, -50, 40, {
-            restitution: 0.8, // Pomppivuus
+        const face = Bodies.circle(x, -50, 45, {
+            restitution: 0.6,
+            friction: 0.1,
             render: {
+                // Jos kuva löytyy, se käytetään. Jos ei, näkyy väri.
+                fillStyle: isJassu ? '#FFD700' : '#FF69B4', 
                 sprite: {
-                    texture: texture,
-                    xScale: 0.2, // Säädä kuvan kokoa
-                    yScale: 0.2
+                    texture: imgPath,
+                    xScale: 0.5,
+                    yScale: 0.5
                 }
             }
         });
@@ -62,34 +65,41 @@
         Composite.add(engine.world, face);
     }
 
-    // Hiirikontrolli klikkaamista varten
+    // Hiirikontrolli
     const mouse = Mouse.create(render.canvas);
     const mouseConstraint = MouseConstraint.create(engine, {
         mouse: mouse,
         constraint: { stiffness: 0.2, render: { visible: false } }
     });
+    Composite.add(engine.world, mouseConstraint);
 
-    // Tunnistetaan klikkaus (koominen poisto)
+    // Klikkauksen tunnistus
     Events.on(mouseConstraint, "mousedown", function(event) {
         const mousePosition = event.mouse.position;
         const bodies = Composite.allBodies(engine.world);
         
-        for (let i = 0; i < bodies.length; i++) {
-            const body = bodies[i];
+        bodies.forEach(body => {
             if (body.label === "clickable" && Matter.Bounds.contains(body.bounds, mousePosition)) {
                 Composite.remove(engine.world, body);
                 score += 10;
                 document.getElementById('score').innerText = "Pisteet: " + score;
-                break;
             }
-        }
+        });
     });
 
-    // Tiputetaan uusi naama 1.5 sekunnin välein
-    setInterval(spawnFace, 1500);
-
+    // Käynnistys
     Render.run(render);
-    Runner.run(Runner.create(), engine);
+    const runner = Runner.create();
+    Runner.run(runner, engine);
+
+    // Tiputustiheys (800ms = nopeampi)
+    setInterval(spawnFace, 800);
+
+    // Korjaus ikkunan koon muutokseen
+    window.addEventListener('resize', () => {
+        render.canvas.width = window.innerWidth;
+        render.canvas.height = window.innerHeight;
+    });
 </script>
 </body>
 </html>
